# cloudon_admin_integration

./: .env.admin-panel.example  .env.integration.example  README.md  pyproject.toml
src/cloudon_admin_integration/: __init__.py  admin_client.py  auth_routes.py  cache.py  config.py  dependencies.py  plugplay.py  responses.py  security.py  sync_routes.py
tests/: test_effective_config.py
